--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -11,16 +11,19 @@
     position: fixed;
     top: 0;
     background-color: $colour-tertiary;
-    animation: opacity 1000ms 2100ms both;
-    -webkit-animation: opacity 1000ms 2100ms both;
-
-    /*animation pour l'apparition et de la disparition du loader laissant place à la page chargée*/
-    @keyframes opacity {
+    animation: opacity 2000ms 2100ms both;
+    -webkit-animation: opacity 2000ms 2100ms both;
+    /*animationpourl'apparitionetdeladisparitionduloaderlaissantplaceàlapagechargée*/
+    @keyframes opacity
+{
         0% {
             opacity: 1;
             z-index: 4;
         }
-
+        70% {
+            opacity: 0.3;
+            z-index: 4;
+        }
         100% {
             opacity: 0;
             z-index: -1;
@@ -36,15 +39,15 @@
         font-family: 'Shrikhand', sans-serif;
         width: 20rem;
         height: 8rem;
-        font-size: 2.5rem;
+        font-size: 3rem;
         font-weight: 900;
         background: linear-gradient(to bottom, $colour-secondary, $colour-primary 95%);
         background-clip: text;
         -webkit-background-clip: text;
         color: transparent;
-        animation: loader 1500ms 100ms cubic-bezier(1, 0.8, 0.3, 05) 1;
-        -webkit-animation: loader 1500ms 1200ms cubic-bezier(2, 1.8, 3, 5) 1;
-    }
+        animation: loader 800ms 100ms cubic-bezier(0.3, 0, 0.1,0.8) 3;
+        -webkit-animation: loader 800ms 100ms cubic-bezier(0.3, 0, 0.1,0.8) 3;
+}
 }
 
 /*animation du logo dans le loader*/
@@ -112,22 +115,22 @@
 /*position et décalage de l'animation du premier point du loader*/
 .loader-dots div:nth-child(1) {
     left: 2rem;
-    animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
-    -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
+    animation: pulsar 1200ms 500ms cubic-bezier(0.3, 0, 0.7, 1) 2;
+    -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.3, 0, 0.7, 1) 2;
 }
 
 /*position et décalage de l'animation  du deuxième point du loader*/
 .loader-dots div:nth-child(2) {
     left: 6rem;
-    animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
-    -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
+    animation: pulsar 1300ms 600ms cubic-bezier(0.3, 0, 0.7, 1) 2;
+    -webkit-animation: pulsar 1300ms 500ms cubic-bezier(0.3, 0, 0.7, 1) 2;
 }
 
 /*position et décalage de l'animation du troisième point du loader*/
 .loader-dots div:nth-child(3) {
     left: 10rem;
-    animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
-    -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
+    animation: pulsar 1500ms 600ms cubic-bezier(0.3, 0, 0.7, 1) 2;
+    -webkit-animation: pulsar 1500ms 600ms cubic-bezier(0.3, 0, 0.7, 1) 2;
 }
 
 /*animation sur les points du loader : transformation de leur taille*/
@@ -144,10 +147,10 @@
 
     50%,
     100% {
-        transform: scale(0.8);
-        -webkit-transform: scale(0.8);
-        -moz-transform: scale(0.8);
-        -ms-transform: scale(0.8);
-        -o-transform: scale(0.8);
-    }
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+}
 }
