--- a/sass/pages/_home_page.scss
+++ b/sass/pages/_home_page.scss
@@ -6,7 +6,7 @@
     height: auto;
     text-align: center;
     align-items: center;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
     background-color: $background-container;
 
     //marge de la partie présentation en version tablette
@@ -54,7 +54,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    margin: 0 1rem 5rem 1rem;
+    margin: 0 1rem 2rem 1rem;
 
     //dimensions, marges et mise en ligne des titres et blocs de la partie "fonctionnement"
     @include tablette-only {
@@ -139,25 +139,26 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 1.5rem;
+        width: 1.2rem;
         height: 1.5rem;
-        padding: 1rem;
+        padding: 0.9rem;
         background-color: $colour-primary;
         border-radius: 50%;
         text-align: center;
-        font-weight: 700;
+        font-weight: 400;
         color: $colour-text;
 
         //changement de taille en version tablette
         @include tablette-only {
-            width: 1rem;
-            height: 1rem;
+            width: 1.5rem;
+            height: 1.5rem;
         }
     }
 
     //position et transparence des icones dans les blocs  
     &__explain .fa-solid {
         position: relative;
+        font-size: 1.2rem;
         right: 1.5rem;
         opacity: (0.5);
     }
