-modification des commentaires dans index.html, btn_new.scss, button_like.scss, loader.scss et container.scss; -changements dans typography.scss : insertion d'une taille plus grande pour la font des h3 et paragraphes en version desktop; -modifications dans loader.scss: ajustement du timing; -changement dans home_page.scss : en version tablette, modification de couleur des blocs pour la partie "fonctionement" et ajout de marges pour la partie restaurant; -éclaircissement de la couleur grise de background-container.

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -20,9 +20,14 @@ h3 {
     font-size: 1.1rem;
     font-weight: 700;
 
-    //taille et gras du texte des h3 pour version petits mobiles
+    //taille du texte des h3 pour version petits mobiles
     @include small-mobile-only {
         font-size: 0.9rem;
+    }
+
+    //taille du texte des h3 pour version desktop
+    @include desktop-only {
+        font-size: 1.3rem;
     }
 }
 
@@ -34,6 +39,12 @@ p {
     @include small-mobile-only {
         font-size: 0.8rem;
     }
+
+    //taille du texte des paragraphes pour version desktop
+    @include desktop-only {
+        font-size: 1.1rem;
+    }
+
 }
 
 /*taille du texte et gras des prix*/
