--- a/sass/components/_btn_new.scss
+++ b/sass/components/_btn_new.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: 0.5rem;
     right: 1rem;
-
+//dimension, couleur et formes du bouton "new"
     &__new {
         @include text-color;
         width: 80%;
