--- a/main.css
+++ b/main.css
@@ -78,6 +78,11 @@ h3 {
     font-size: 0.9rem;
   }
 }
+@media all and (min-width: 992px) {
+  h3 {
+    font-size: 1.3rem;
+  }
+}
 
 /*taille du texte des paragraphes*/
 p {
@@ -86,6 +91,11 @@ p {
 @media all and (max-width: 360px) {
   p {
     font-size: 0.8rem;
+  }
+}
+@media all and (min-width: 992px) {
+  p {
+    font-size: 1.1rem;
   }
 }
 
@@ -308,7 +318,7 @@ p {
   background-color: #99E2D0;
   animation: opacity 2000ms 2100ms both;
   -webkit-animation: opacity 2000ms 2100ms both;
-  /*animationpourl'apparitionetdeladisparitionduloaderlaissantplaceàlapagechargée*/
+  /*animation pour l'apparition et la disparition du loader */
 }
 @keyframes opacity {
   0% {
@@ -400,25 +410,25 @@ p {
   -o-border-radius: 50%;
 }
 
-/*position et décalage de l'animation du premier point du loader*/
+/*position et décalage de l'animation pour le premier point du loader*/
 .loader-dots div:nth-child(1) {
   left: 2rem;
-  animation: pulsar 1200ms 500ms cubic-bezier(0.3, 0, 0.7, 1) 2;
-  -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.3, 0, 0.7, 1) 2;
+  animation: pulsar 1100ms 500ms cubic-bezier(0.3, 0, 0.7, 1) infinite;
+  -webkit-animation: pulsar 1100ms 500ms cubic-bezier(0.3, 0, 0.7, 1) infinite;
 }
 
-/*position et décalage de l'animation  du deuxième point du loader*/
+/*position et décalage de l'animation  pour deuxième point du loader*/
 .loader-dots div:nth-child(2) {
   left: 6rem;
-  animation: pulsar 1300ms 600ms cubic-bezier(0.3, 0, 0.7, 1) 2;
-  -webkit-animation: pulsar 1300ms 500ms cubic-bezier(0.3, 0, 0.7, 1) 2;
+  animation: pulsar 1300ms 700ms cubic-bezier(0.3, 0, 0.7, 1) infinite;
+  -webkit-animation: pulsar 1300ms 700ms cubic-bezier(0.3, 0, 0.7, 1) infinite;
 }
 
-/*position et décalage de l'animation du troisième point du loader*/
+/*position et décalage de l'animation pour le troisième point du loader*/
 .loader-dots div:nth-child(3) {
   left: 10rem;
-  animation: pulsar 1500ms 600ms cubic-bezier(0.3, 0, 0.7, 1) 2;
-  -webkit-animation: pulsar 1500ms 600ms cubic-bezier(0.3, 0, 0.7, 1) 2;
+  animation: pulsar 1400ms 800ms cubic-bezier(0.3, 0, 0.7, 1) infinite;
+  -webkit-animation: pulsar 1400ms 800ms cubic-bezier(0.3, 0, 0.7, 1) infinite;
 }
 
 /*animation sur les points du loader : transformation de leur taille*/
@@ -480,7 +490,7 @@ header {
   height: auto;
   padding-bottom: 11rem;
   margin-bottom: 3.75rem;
-  background-color: #f2f2f2;
+  background-color: #f6f6f6;
   border-radius: 25px 25px 0 0;
   -webkit-border-radius: 25px 25px 0 0;
   -moz-border-radius: 25px 25px 0 0;
@@ -576,7 +586,7 @@ footer {
   text-align: center;
   align-items: center;
   margin-bottom: 3rem;
-  background-color: #f2f2f2;
+  background-color: #f6f6f6;
 }
 @media all and (min-width: 767px) {
   .presentation {
@@ -599,7 +609,7 @@ footer {
   padding: 1rem;
   font-weight: 700;
   box-shadow: inset 0 0.2rem 0.2rem rgba(7, 15, 56, 0.07);
-  background-color: #ededed;
+  background-color: #f1f1f1;
 }
 .presentation__heading {
   font-weight: 900;
@@ -626,7 +636,6 @@ footer {
     flex-direction: row;
     margin: 0;
     padding: 1rem 1rem 6rem 1rem;
-    background-color: #FF79DA;
   }
 }
 @media all and (min-width: 992px) {
@@ -677,11 +686,7 @@ footer {
   box-shadow: 0.5rem 0.2rem 1rem rgb(202, 198, 198);
   font-weight: 700;
   cursor: pointer;
-}
-@media all and (min-width: 767px) {
-  .functioning__explain {
-    background-color: azure;
-  }
+  background-color: #f6f6f6;
 }
 .functioning__explain:hover {
   background-color: hsl(267deg, 66%, 94%);
@@ -727,7 +732,7 @@ footer {
   width: auto;
   height: auto;
   gap: 1rem;
-  background-color: #f2f2f2;
+  background-color: #f6f6f6;
   padding-bottom: 5rem;
 }
 @media all and (min-width: 767px) {
@@ -735,8 +740,9 @@ footer {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 65%;
+    width: 62%;
     padding-bottom: 6rem;
+    margin: 0 1rem 1rem 0;
   }
 }
 @media all and (min-width: 992px) {
@@ -886,6 +892,11 @@ footer {
   right: 2rem;
   bottom: 1rem;
 }
+@media all and (min-width: 767px) {
+  .like--card-position {
+    right: 1rem;
+  }
+}
 
 /*Propriétés pour aligner icône et logo dans l'entête  */
 .header-menu {
@@ -977,7 +988,7 @@ footer {
   position: absolute;
   top: 0.7rem;
   right: 1rem;
-  background-color: #f2f2f2;
+  background-color: #f6f6f6;
 }
 
 /*dimensions, positions et propriétés flex de la section contenant "entrée"/"plats"/"dessert" avec les menus, 
