--- a/sass/components/_button_like.scss
+++ b/sass/components/_button_like.scss
@@ -34,10 +34,8 @@
             -ms-transform: scale(1.15);
             -o-transform: scale(1.15);
         }
-
-        //dimensions, position et bordure du span contenant le coeur initial
     }
-
+  //dimensions, position et bordure du coeur initial
     &__before {
         display: inline-block;
         position: absolute;
@@ -51,7 +49,7 @@
         -o-border-radius: 50%;
     }
 
-    //dimensions, position, bordure, couleur graduée et agrandissement du span et du coeur remplissant le coeur initial
+    //dimension, position, bordure, couleur graduée et agrandissement du coeur remplissant le coeur initial
     &__after {
         display: inline-block;
         font-size: 1.6rem;
