--- a/main.css
+++ b/main.css
@@ -155,10 +155,13 @@ p {
 .button-action {
   display: inline-block;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 60%;
   height: 3.5rem;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.1rem;
   color: white;
   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   margin: 1rem 0 4rem 0;
